style.css
/* ... */
@media (max-width: 900px) {
  /* Header & Hamburger Menu */
  #hamburger-menu nav ul .nav-item {
    font-size: 26px;
    line-height: 52px;
    line-height: 202%;
  }

  /* Gallery Section */
  #gallery article p {
    font-size: 30px;
  }
}

@media (max-width: 500px) {
  /* General Classes */
  .section-h1 {
    font-size: 50px;
    line-height: 94px;
  }

  .section-h2 {
    font-size: 20px;
    line-height: 37px;
  }

  .section-p {
    font-size: 20px;
    line-height: 30px;
  }

  /* Hero Section */
  .page-section#hero {
    background-size: 1264.34px 655.82px;
    background-position: 0 0;
  }
  #hero article h1 {
    font-size: 50px;
  }
  #hero article p {
    font-size: 20px;
    line-height: 30px;
    line-height: 151%;
  }

  /* Gallery Section */
  .page-section#gallery {
    background-size: 1365px 678px;
    background-position: -864px 100%;
  }

  #gallery article button img {
    width: 20px;
    height: 20px;
  }

  #gallery article p {
    font-size: 20px;
    line-height: 28px;
    /* line-height: 75%; */
  }

  /* Jobs Section */
  .page-section#jobs {
    background-size: 1088px 410px;
    background-position: -281px 0;
  }

  /* Contact Section & Footer*/
  .page-section#contact {
    background-size: 1172px 593px;
    background-position: -640px 100%;
  }
  footer {
    font-size: 14px;
    line-height: 131.4%;
  }
}

@media (max-width: 450px) {
}

@media (max-height: 800px) {
  #hero .container {
    padding-top: 100px;
  }
}

@media (max-height: 670px) {
  #hero article p {
    margin-bottom: 30px;
  }
}

